adds min TLS version to Istio

--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -7,6 +7,9 @@ istio:
     tenant-ingressgateway:
       type: "LoadBalancer"
   values:
+    meshConfig:
+      meshMTLS:
+        minProtocolVersion: TLSV1_3
     istiod:
       resources:
         requests:
