--- a/.github/workflows/eks/config.yaml
+++ b/.github/workflows/eks/config.yaml
@@ -6,6 +6,35 @@ metadata:
   region: us-west-2
   version: "1.26"
 
+vpc:
+  id: "vpc-03c1cd73aece8bfea"  # (optional, must match VPC ID used for each subnet below)
+  cidr: "192.168.0.0/16"       # (optional, must match CIDR used by the given VPC)
+  subnets:
+    # must provide 'private' and/or 'public' subnets by availability zone as shown
+    public:
+      us-west-2a:
+        id: "subnet-041516854dd66437f"
+        cidr: "192.168.0.0/21" # (optional, must match CIDR used by the given subnet)
+
+      us-west-2b:
+        id: "subnet-0de30cd58a6a6d763"
+        cidr: "192.168.8.0/21"  # (optional, must match CIDR used by the given subnet)
+
+      us-west-2c:
+        id: "subnet-0283cdc0228b519ea"
+        cidr: "192.168.16.0/21"   # (optional, must match CIDR used by the given subnet)
+    private:
+      us-west-2a:
+        id: "subnet-0f381300221588640"
+        cidr: "192.168.48.0/21" # (optional, must match CIDR used by the given subnet)
+
+      us-west-2b:
+        id: "subnet-065bdf771fa18e8be"
+        cidr: "192.168.40.0/21"  # (optional, must match CIDR used by the given subnet)
+
+      us-west-2c:
+        id: "subnet-00f71956cdec8f1dc"
+        cidr: "192.168.0.0/19"   # (optional, must match CIDR used by the given subnet)
 # May want to look at this for testing 
 # privateCluster:
 #   enabled: true
