--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -9,5 +9,5 @@ package:
   deploy:
     set:
       domain: bigbang.dev
-      public_key_file: bigbang.dev.key
-      public_cert_file: bigbang.dev.cert
+      key_file: bigbang.dev.key
+      cert_file: bigbang.dev.cert
