--- a/k3d/zarf-config.yaml
+++ b/k3d/zarf-config.yaml
@@ -9,6 +9,6 @@ package:
   deploy:
     set:
       domain: bigbang.dev
-      public_key_file: bigbang.dev.key
-      public_cert_file: bigbang.dev.cert
+      key_file: bigbang.dev.key
+      cert_file: bigbang.dev.cert
       host_path: "/var/lib/rancher/k3s/storage/*"
