--- a/.github/workflows/test-aws-upgrade.yaml
+++ b/.github/workflows/test-aws-upgrade.yaml
@@ -68,7 +68,6 @@ jobs:
       - name: Deploy latest package version
         env:
           SHA: ${{ github.sha }}
-        working-directory: aws
         run: |
           zarf package deploy \
             oci://ghcr.io/defenseunicorns/packages/big-bang-distro-aws:${{ steps.latest-package-version.outputs.latest-package-version }} \
@@ -78,6 +77,8 @@ jobs:
             --set state_key="tfstate/ci/upgrade/${SHA:0:7}-state-bucket.tfstate" \
             --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
+        working-directory: aws
+        timeout-minutes: 60
 
       - name: Deploy DUBBD-AWS
         env:
@@ -99,6 +100,7 @@ jobs:
         run: zarf package remove zarf-package-*.tar.zst --confirm
         working-directory: aws
         timeout-minutes: 60
+        continue-on-error: true
 
       - name: Teardown EKS cluster
         if: always()
@@ -106,3 +108,5 @@ jobs:
         run: |
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
+        timeout-minutes: 60
+        continue-on-error: true
