--- a/.github/workflows/DEPRECATED.pipeline.dubbd.yaml
+++ b/.github/workflows/DEPRECATED.pipeline.dubbd.yaml
@@ -6,7 +6,7 @@ on:
       - NEVER
 
 jobs:
-  clean-install:
+  eksctl:
     runs-on: ubuntu-latest
   
     steps:
@@ -45,11 +45,6 @@ jobs:
         run: zarf package create --confirm
         working-directory: .github/workflows/eks
 
-      - name: Create DUBBD
-        run: zarf package create --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
-
       - name: Create EKS cluster
         run: |
           echo ${{ steps.get_cluster_name.outputs.short_sha }}
@@ -63,6 +58,11 @@ jobs:
       - name: Zarf init
         run: |
           zarf init -a amd64 --components=git-server --confirm
+
+      - name: Create DUBBD
+        run: zarf package create --confirm
+        working-directory: defense-unicorns-distro
+        timeout-minutes: 60
       
       - name: Deploy DUBBD
         run: zarf package deploy zarf-package-*.tar.zst --confirm
@@ -81,6 +81,3 @@ jobs:
           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
         working-directory: .github/workflows/eks
 
-      - name: Save zarf debug logs
-        if: always()
-        uses: defenseunicorns/zarf/.github/actions/save-logs@main
