initial embed of zarf-package-k3d into k3d flavor of dubbd. Intention is to provide simple IaC for k3d infrastructure to simplify setup instructions. Updated README.

--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -2,7 +2,7 @@
 kind: ZarfPackageConfig
 metadata:
   name: big-bang-distro-k3d
-  description: "Defense Unicorns Big Bang Distro"
+  description: "Defense Unicorns Big Bang Distro K3D Environment"
   # x-release-please-start-version
   version: "0.2.1"
   # x-release-please-end
