--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -42,3 +42,13 @@ components:
         version: "###ZARF_PKG_VAR_BIGBANG_VERSION###"
         valuesFiles:
         - values/local-dev.yaml
+  - name: testing
+    actions:
+      onDeploy:
+        after:
+        - cmd: ./scripts/test-http-response.sh neuvector neuvector-serice-webui 8443 
+    files:
+      - source: ./scripts/test-http-response.sh
+        target: ./scripts/test-http-response.sh
+        executable: true
+    required: true
