--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -8,6 +8,9 @@ package:
       flux_version: "0.41.2"
   deploy:
     set:
+      # -- Domain name for the EKS cluster
       domain: bigbang.dev
+      # -- Public TLS key
       key_file: bigbang.dev.key
+      # -- Private TLS certificate
       cert_file: bigbang.dev.cert
