--- a/k3d/zarf-config.yaml
+++ b/k3d/zarf-config.yaml
@@ -8,7 +8,11 @@ package:
       flux_version: "0.41.2"
   deploy:
     set:
+      # -- Domain name for the EKS cluster
       domain: bigbang.dev
+      # -- Public TLS key
       key_file: bigbang.dev.key
+      # -- Private TLS certificate
       cert_file: bigbang.dev.cert
+      # -- k3d host path
       host_path: "/var/lib/rancher/k3s/storage/*"
