removes public and private verbiage

--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -12,9 +12,9 @@ package:
     set:
       # -- Domain name for the EKS cluster
       domain: bigbang.dev
-      # -- Public TLS key
+      # -- TLS key
       key_file: bigbang.dev.key
-      # -- Private TLS certificate
+      # -- TLS cert
       cert_file: bigbang.dev.cert
       # -- Name of the EKS cluster
       name: "big-bang-aws"
