--- a/defense-unicorns-distro/zarf-config.yaml
+++ b/defense-unicorns-distro/zarf-config.yaml
@@ -10,7 +10,7 @@ package:
     set:
       # -- Domain name for the EKS cluster
       domain: bigbang.dev
-      # -- Public TLS key
+      # -- TLS key
       key_file: bigbang.dev.key
-      # -- Private TLS certificate
+      # -- TLS cert
       cert_file: bigbang.dev.cert
