--- a/k3d/zarf-config.yaml
+++ b/k3d/zarf-config.yaml
@@ -10,9 +10,9 @@ package:
     set:
       # -- Domain name for the EKS cluster
       domain: bigbang.dev
-      # -- Public TLS key
+      # -- TLS key
       key_file: bigbang.dev.key
-      # -- Private TLS certificate
+      # -- TLS cert
       cert_file: bigbang.dev.cert
       # -- k3d host path
       host_path: "/var/lib/rancher/k3s/storage/*"
