--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -101,8 +101,16 @@ components:
       onRemove:
         before:
           - cmd: |
-              if [ -d "run/loki" ] && [ "$(terraform output force_destroy)" = true ]; then terraform destroy -auto-approve; fi
-            dir: run/loki
+              if [ -d "run/loki" ]; then
+                cd run/loki
+                if [ "$(terraform output force_destroy)" = true ]; then
+                  terraform destroy -auto-approve
+                else
+                  echo "Skipping remove, force_destroy is set to false"
+                fi
+              else
+                echo "Cannot remove: run/loki directory does not exist"
+              fi
   - name: outputs
     required: true
     actions:
