--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -65,56 +65,17 @@ components:
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_linux_amd64.zip
       - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
+
   - name: loki-module
     required: true
-    actions:
-      onCreate:
-        before:
-          - cmd: terraform get -update
-            dir: loki
-    files:
-    - source: loki/.terraform
-      target: run/loki/.terraform
-    - source: loki/main.tf
-      target: run/loki/main.tf
-    - source: loki/variables.tf
-      target: run/loki/variables.tf
-    - source: loki/output.tf
-      target: run/loki/output.tf
-    - source: loki/terraform.tfvars
-      target: run/loki/terraform.tfvars
+    import:
+      path: loki
+
   - name: execute-terraform
     required: true
-    actions:
-      onDeploy:
-        before:
-          - cmd: "test -d ./loki/ && chmod -R ugo+rwx ./loki/ || echo $?"
-            dir: run
-          - cmd: |
-              terraform init -force-copy \
-              -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
-              -backend-config="key=${ZARF_VAR_STATE_KEY}" \
-              -backend-config="region=${ZARF_VAR_REGION}" \
-              -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
-            dir: run/loki
-          - cmd: "terraform plan"
-            dir: run/loki
-          - cmd: sleep 15 #time to review
-          - cmd: "terraform apply -auto-approve"
-            dir: run/loki
-      onRemove:
-        before:
-          - cmd: |
-              if [ -d "run/loki" ]; then
-                cd run/loki
-                if [ "$(terraform output force_destroy)" = true ]; then
-                  terraform destroy -auto-approve
-                else
-                  echo "Skipping remove, force_destroy is set to false"
-                fi
-              else
-                echo "Cannot remove: run/loki directory does not exist"
-              fi
+    import:
+      path: loki
+
   - name: outputs
     required: true
     actions:
