major push forward in refactoring k3d-local sub-package into dubbd zarf package. Still untested, currently grappling with create-time parameter expansion.

--- a/k3d/zarf-package-k3d/zarf-config.yaml
+++ b/k3d/zarf-package-k3d/zarf-config.yaml
@@ -1,5 +1,5 @@
 package:
   create: 
     set:
-      zarf_version: v0.26.1
+      zarf_version: ${ZARF_VERSION}
     max_package_size: "1000000000"
