Delete both S3 and KMS when force_delete is set to true (#266)

--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -100,8 +100,17 @@ components:
             dir: run/loki
       onRemove:
         before:
-          - cmd: "terraform destroy -auto-approve"
-            dir: run/loki
+          - cmd: |
+              if [ -d "run/loki" ]; then
+                cd run/loki
+                if [ "$(terraform output force_destroy)" = true ]; then
+                  terraform destroy -auto-approve
+                else
+                  echo "Skipping remove, force_destroy is set to false"
+                fi
+              else
+                echo "Cannot remove: run/loki directory does not exist"
+              fi
   - name: outputs
     required: true
     actions:
