--- a/k3d/zarf-package-k3d/zarf.yaml
+++ b/k3d/zarf-package-k3d/zarf.yaml
@@ -3,36 +3,29 @@ kind: ZarfPackageConfig
 metadata:
   name: k3d-local
   description: Defense Unicorns k3d environment 
-  version: '###ZARF_CONST_VERSION###'
+  version: '###ZARF_PKG_TMPL_ZARF_VERSION###'
   architecture: amd64
-  authors: "@runyontr @timblaktu"
+  authors: "@runyontr, @timblaktu"
   source: https://github.com/defenseunicorns/uds-package-dubbd/k3d/zarf-package-k3d
   vendor: Defense Unicorns
-  # Important Note on Templating with Constants and Variables:
-  #   zarf package create only templates the zarf.yaml file, and 
-  #   zarf package deploy only templates other manifests, charts and files.
-  # This means that 
 constants:
-  - name: VERSION
-    value: v0.27.0
-  - name: ARCH
-    value: amd64
+  - name: ZARF_VERSION
+    value: "###ZARF_PKG_TMPL_ZARF_VERSION###"
   - name: DL_BASE_URL
-    value: https://github.com/defenseunicorns/zarf/releases/download
+    value: "###ZARF_PKG_TMPL_DL_BASE_URL###"
   - name: K3D_CLUSTER_NAME
-    value: dubbd
-variables:
-  - name: DL_VERSION_URL
-    default: '###ZARF_CONST_DL_BASE_URL###/###ZARF_CONST_VERSION###'
-  - name: INIT_FILENAME
-    default: 'zarf-init-###ZARF_CONST_ARCH###-###ZARF_CONST_VERSION###.tar.zst'
+    value: "###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###"
+  #- name: DL_VERSION_URL
+  #  value: '###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###'
+  #- name: INIT_FILENAME
+  #  value: 'zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst'
   - name: INIT_COMPONENTS
-    default: "git-server"
+    value: "###ZARF_PKG_TMPL_INIT_COMPONENTS###"
 components:
   - name: k3d
     # TODO: generate description field from script docstring using something like:
     #       sed -n '/^#.*\$/,/^$/p' scripts/script.sh
-    description: 'Create k3d cluster named ###ZARF_CONST_K3D_CLUSTER_NAME###'
+    description: 'Create k3d cluster named ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
     required: true
     files:
       - source: scripts/k3d.sh
@@ -44,19 +37,19 @@ components:
           - cmd: ./k3d.sh
       onRemove:
         after:
-          - cmd: 'k3d cluster delete ###ZARF_CONST_K3D_CLUSTER_NAME###'
+          - cmd: 'k3d cluster delete ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
   - name: init
-    description: 'Deploy (###ZARF_VAR_INIT_COMPONENTS###) components of zarf init package ###ZARF_CONST_VERSION### to k3d cluster ###ZARF_CONST_K3D_CLUSTER_NAME###'
+    description: 'Deploy (###ZARF_PKG_TMPL_INIT_COMPONENTS###) components of zarf init package ###ZARF_PKG_TMPL_ZARF_VERSION### to k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
     required: true
     actions:
       onCreate:
         before:
           - cmd: |
-              wget ###ZARF_CONST_DL_VERSION_URL###/{checksums.txt,###ZARF_CONST_INIT_FILENAME###
-              test "$(sha256sum ###ZARF_CONST_INIT_FILENAME###)" = "$(grep --color=NEVER ###ZARF_CONST_INIT_FILENAME### checksums.txt)"
+              wget ###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###/{checksums.txt,zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst}
+              test "$(sha256sum zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst)" = "$(grep --color=NEVER zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst checksums.txt)"
       onDeploy:
         after: 
-          - cmd: 'zarf package deploy ###ZARF_CONST_INIT_FILENAME### --components ###ZARF_VAR_INIT_COMPONENTS### --confirm -l warn'
+          - cmd: 'zarf package deploy zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst --components ###ZARF_PKG_TMPL_INIT_COMPONENTS### --confirm -l warn'
   - name: metallb
     required: true
     files:
@@ -72,5 +65,5 @@ components:
         files:
           - manifests/metallb/metallb-native.yaml
     images:
-      - "quay.io/metallb/controller:v0.13.9"
+      - quay.io/metallb/controller:v0.13.9
       - quay.io/metallb/speaker:v0.13.9
