--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,8 +4,7 @@
       "release-type": "simple",
       "draft": false,
       "changelog-path": "CHANGELOG.md",
-      "bump-minor-pre-major": "true",
-      "bump-patch-for-minor-pre-major": "true",
+      "versioning": "always-bump-patch",
       "extra-files": [
         "aws/zarf.yaml",
         "defense-unicorns-distro/zarf.yaml",
