--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -6,6 +6,7 @@ on:
 permissions:
   id-token: write
   contents: read
+  repository-projects: read
       
 jobs:
   test-clean-k3d-install:
@@ -39,26 +40,19 @@ jobs:
         run: |
           zarf init -a amd64 --components=git-server --confirm
 
-      - name: Deploy DUBBD-AWS
+      - name: Deploy DUBBD-K3D
         env:
           SHA: ${{ github.sha }}
         run: |
-          echo ${{ steps.get_cluster_name.outputs.eks_cluster_name }}
-
           zarf package deploy zarf-package-*.tar.zst \
-            --set loki_force_destroy=true \
-            --set name=${{ steps.get_cluster_name.outputs.eks_cluster_name }} \
-            --set state_bucket_name="uds-ci-state-bucket" \
-            --set state_key="tfstate/ci/install/${SHA:0:7}-state-bucket.tfstate" \
-            --set state_dynamodb_table_name="uds-ci-state-dynamodb" \
             --confirm
-        working-directory: aws
+        working-directory: k3d
         timeout-minutes: 60
 
-      - name: Remove DUBBD-AWS
+      - name: Remove DUBBD-K3D
         if: always()
         run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: aws
+        working-directory: k3d
         timeout-minutes: 60
 
       - name: destroy_cluster
