--- a/k3d/zarf-package-k3d/zarf.yaml
+++ b/k3d/zarf-package-k3d/zarf.yaml
@@ -41,12 +41,25 @@ components:
   - name: init
     description: 'Deploy (###ZARF_PKG_TMPL_INIT_COMPONENTS###) components of zarf init package ###ZARF_PKG_TMPL_ZARF_VERSION### to k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
     required: true
+    files:
+      - source: init
+        target: init
+      # Manually fetch init pkg
+      # - source: '###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###/zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst'
+      #   target: 'zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst'
+      # - source: '###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###/checksums.txt'
+      #   target: 'checksums.txt'
     actions:
       onCreate:
         before:
-          - cmd: |
-              wget ###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###/{checksums.txt,zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst}
-              test "$(sha256sum zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst)" = "$(grep --color=NEVER zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst checksums.txt)"
+          - cmd: ./zarf tools download-init -o init
+        # after:
+        #   - cmd: rm -rf init        
+#         # Manually fetch init pkg
+#         before:
+#           - cmd: |
+#               # wget ###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###/{checksums.txt,zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst}
+#               test "$(sha256sum zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst)" = "$(grep --color=NEVER zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst checksums.txt)"
       onDeploy:
         after: 
           - cmd: 'zarf package deploy zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst --components ###ZARF_PKG_TMPL_INIT_COMPONENTS### --confirm -l warn'
