--- a/.github/workflows/test-k3d-package.yaml
+++ b/.github/workflows/test-k3d-package.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           username: ${{ secrets.REGISTRY1_USERNAME }}
           password: ${{ secrets.REGISTRY1_PASSWORD }}
-          working-dir: aws
+          working-dir: k3d
           download-init-package: true        
           timeout-minutes: 60
 
@@ -56,6 +56,7 @@ jobs:
         timeout-minutes: 60
 
       - name: destroy_cluster
+        if: always()
         uses: defenseunicorns/uds-aws-ci-k3d@action
         with:
           cluster_action: destroy
