feat: Updating Slack notifications to slackapi action
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notifications.yaml
+++ b/.github/workflows/slack-notifications.yaml
@@ -8,16 +8,29 @@ on:
 jobs:
   send-notification:
     runs-on: ubuntu-latest
-
+    name: New PR created
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Send Slack notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
         with:
-          channel: uds-pull-requests
-          text: "New pull request: ${{ github.repository }}/${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}"
-
+          channel-id: 'uds-pull-requests'
+          payload: |
+            {
+              "text": "New pull request: ${{ github.repository }}/${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
