feat: Updating Slack notifications to slackapi action
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notifications.yaml
+++ b/.github/workflows/slack-notifications.yaml
@@ -20,13 +20,12 @@ jobs:
           channel-id: 'uds-pull-requests'
           payload: |
             {
-              "text": "New pull request: ${{ github.repository }}/${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": "New pull request: ${{ github.repository }}/${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}"
                   }
                 }
               ]
