--- a/k3d/zarf-package-k3d/zarf-config.yaml
+++ b/k3d/zarf-package-k3d/zarf-config.yaml
@@ -7,7 +7,8 @@ package:
   create: 
     max_package_size: 1000000000
     set:
-      zarf_version: v0.27.1
+      # TODO: enforce/check `which zarf` is this version
+      zarf_version: v0.27.0
       dl_base_url: https://github.com/defenseunicorns/zarf/releases/download
       k3d_cluster_name: dubbd
       init_components: "git-server"
