--- a/k3d/values/local-dev.yaml
+++ b/k3d/values/local-dev.yaml
@@ -1,3 +1,4 @@
+# override neuvector values required for k3d
 neuvector:
   enabled: true
   values:
@@ -5,6 +6,8 @@ neuvector:
       enabled: false
     k3s:
       enabled: true
+    monitor:
+      install: false
 
 kyvernoPolicies:
   values:
