--- a/.github/actions/latest-package-version/action.yaml
+++ b/.github/actions/latest-package-version/action.yaml
@@ -33,6 +33,12 @@ runs:
             package_name="${package_name//\//%2F}"
         fi
 
+        # Check if the package name contains '-skeleton' and remove it
+        if [[ "$package_name" =~ "-skeleton" ]]
+        then
+            package_name="${package_name//-skeleton/}"
+        fi
+
         response="$(curl -s -H "Authorization: Bearer $github_token" \
           https://api.github.com/orgs/defenseunicorns/packages/container/${package_name}/versions)"
 
