--- a/.github/actions/latest-package-version/action.yaml
+++ b/.github/actions/latest-package-version/action.yaml
@@ -33,12 +33,6 @@ runs:
             package_name="${package_name//\//%2F}"
         fi
 
-        # Check if the package name contains '-skeleton' and remove it
-        if [[ "$package_name" =~ "-skeleton" ]]
-        then
-            package_name="${package_name//-skeleton/}"
-        fi
-
         response="$(curl -s -H "Authorization: Bearer $github_token" \
           https://api.github.com/orgs/defenseunicorns/packages/container/${package_name}/versions)"
 
@@ -50,5 +44,11 @@ runs:
         fi
 
         latest_package_version="$(echo "$response" | jq -r '.[0].metadata.container.tags[0]')"
+
+        # Check if the latest package version tag contains '-skeleton' and remove it
+        if [[ "$latest_package_version" =~ "-skeleton" ]]
+        then
+            latest_package_version="${latest_package_version//-skeleton/}"
+        fi
 
         echo "latest-package-version=$(echo "$latest_package_version")" >> $GITHUB_OUTPUT
