--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -46,7 +46,9 @@ components:
     actions:
       onDeploy:
         after:
-        - cmd: ./scripts/test-http-response.sh neuvector neuvector-service-webui 8443 
+        - cmd: |
+              export PATH=$(dirname ./zarf):$PATH
+              ./scripts/test-http-response.sh neuvector neuvector-service-webui 8443 
     files:
       - source: ./scripts/test-http-response.sh
         target: ./scripts/test-http-response.sh
