--- a/.github/workflows/slack-notifications.yaml
+++ b/.github/workflows/slack-notifications.yaml
@@ -25,7 +25,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "New pull request: ${{ github.repository }}/${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}"
+                    "text": ":review New pull request: ${{ github.repository }}/${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}"
                   }
                 }
               ]
