--- a/k3d/local/zarf.yaml
+++ b/k3d/local/zarf.yaml
@@ -3,22 +3,15 @@ kind: ZarfPackageConfig
 metadata:
   name: k3d-local
   description: Defense Unicorns k3d environment 
-  version: '###ZARF_PKG_TMPL_ZARF_VERSION###'
   architecture: amd64
   authors: "@runyontr, @timblaktu"
   source: https://github.com/defenseunicorns/uds-package-dubbd/k3d/local
   vendor: Defense Unicorns
 constants:
-  - name: ZARF_VERSION
-    value: "###ZARF_PKG_TMPL_ZARF_VERSION###"
   - name: DL_BASE_URL
     value: "###ZARF_PKG_TMPL_DL_BASE_URL###"
   - name: K3D_CLUSTER_NAME
     value: "###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###"
-  #- name: DL_VERSION_URL
-  #  value: '###ZARF_PKG_TMPL_DL_BASE_URL###/###ZARF_PKG_TMPL_ZARF_VERSION###'
-  #- name: INIT_FILENAME
-  #  value: 'zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst'
   - name: INIT_COMPONENTS
     value: "###ZARF_PKG_TMPL_INIT_COMPONENTS###"
 components:
@@ -37,18 +30,18 @@ components:
         after:
           - cmd: 'k3d cluster delete ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
   - name: init
-    description: 'Deploy (###ZARF_PKG_TMPL_INIT_COMPONENTS###) components of zarf init package ###ZARF_PKG_TMPL_ZARF_VERSION### to k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
+    description: 'Deploy zarf init package with components: (###ZARF_PKG_TMPL_INIT_COMPONENTS###) to k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
     required: true
     files:
-      - source: zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst
-        target: zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst
+      - source: init.tar.zst
+        target: init.tar.zst
     actions:
       onCreate:
         before:
-          - cmd: ./zarf tools download-init
+          - cmd: ./zarf tools download-init -o init.tar.zst
       onDeploy:
         after: 
-          - cmd: 'zarf package deploy zarf-init-###ZARF_PKG_ARCH###-###ZARF_PKG_TMPL_ZARF_VERSION###.tar.zst --components ###ZARF_PKG_TMPL_INIT_COMPONENTS### --confirm -l warn'
+          - cmd: 'zarf package deploy init.tar.zst --components ###ZARF_PKG_TMPL_INIT_COMPONENTS### --confirm -l warn'
   - name: metallb
     required: true
     files:
