--- a/aws/values/aws-istio.yaml
+++ b/aws/values/aws-istio.yaml
@@ -3,10 +3,10 @@ istio:
     admin-ingressgateway:
       kubernetesResourceSpec:
         serviceAnnotations:
-          service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+          service.beta.kubernetes.io/aws-load-balancer-internal: "###ZARF_VAR_PRIVATE_TENANT_LB###"
           service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
     tenant-ingressgateway:
       kubernetesResourceSpec:
         serviceAnnotations:
-          service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+          service.beta.kubernetes.io/aws-load-balancer-internal: "###ZARF_VAR_PRIVATE_TENANT_LB###"
           service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
