--- a/aws/zarf-config.yaml
+++ b/aws/zarf-config.yaml
@@ -26,8 +26,9 @@ package:
       state_dynamodb_table_name: uds-dev-state-dynamodb
       # -- AWS region
       region: us-west-2
+      # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
+      private_tenant_lb: true
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
       # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
       #loki_force_destroy: "true"
-
