--- a/k3d/local/zarf.yaml
+++ b/k3d/local/zarf.yaml
@@ -33,16 +33,19 @@ components:
     description: 'Deploy zarf init package with components: (###ZARF_PKG_TMPL_INIT_COMPONENTS###) to k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
     required: true
     files:
-      - source: ./downloads/init.tar.zst
-        target: ./init.tar.zst
+      - source: downloads/init.tar.zst
+        target: init.tar.zst
     actions:
       onCreate:
         before:
-          # TODO: remove all but the one we just downloaded- cmd: ./zarf tools download-init -o downloads && (cd downloads && ls -tp | grep -v '/$' | tail -n +1 | xargs -I {} rm -- {}) && mv downloads/*.tar.zst downlaods/init.tar.zst
-          - cmd: ./zarf tools download-init -o downloads && (cd downloads && mv *.tar.zst init.tar.zst)
+          - cmd: |
+              F='zarf-init-###ZARF_PKG_ARCH###-$(zarf version).tar.zst' \
+              && [[ ! -f "$F" ]] && zarf tools download-init -o downloads
       onDeploy:
         after: 
-          - cmd: 'zarf package deploy init.tar.zst --components ###ZARF_PKG_TMPL_INIT_COMPONENTS### --confirm -l warn && rm -f downloads/*'
+          - cmd: |
+              F='zarf-init-###ZARF_PKG_ARCH###-$(zarf version).tar.zst' \
+              && zarf package deploy $F --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn
   - name: metallb
     required: true
     files:
