--- a/k3d/local/zarf.yaml
+++ b/k3d/local/zarf.yaml
@@ -33,19 +33,24 @@ components:
     description: 'Deploy zarf init package with components: (###ZARF_PKG_TMPL_INIT_COMPONENTS###) to k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME###'
     required: true
     files:
-      - source: downloads/init.tar.zst
+      - source: init.tar.zst
         target: init.tar.zst
     actions:
       onCreate:
         before:
           - cmd: |
-              F='zarf-init-###ZARF_PKG_ARCH###-$(zarf version).tar.zst' \
-              && [[ ! -f "$F" ]] && zarf tools download-init -o downloads
+              F="downloads/zarf-init-###ZARF_PKG_ARCH###-$(zarf version).tar.zst";
+              if [ -f "$F" ]; then
+                echo "Using cached zarf init package: $F..."
+              else
+                (set -x; zarf tools download-init -o downloads)
+              fi
+              cp -f "$F" init.tar.zst
+              ls -lath *.zst downloads
       onDeploy:
         after: 
           - cmd: |
-              F='zarf-init-###ZARF_PKG_ARCH###-$(zarf version).tar.zst' \
-              && zarf package deploy $F --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn
+              zarf package deploy init.tar.zst --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn
   - name: metallb
     required: true
     files:
@@ -63,3 +68,11 @@ components:
     images:
       - quay.io/metallb/controller:v0.13.9
       - quay.io/metallb/speaker:v0.13.9
+  - name: finish
+    required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: |
+              echo "k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME has been zarf initialized:"
+              (set -x; zarf tools kubectl config view; zarf tools kubectl get pods -A)
