--- a/.github/workflows/test-aws-upgrade.yaml
+++ b/.github/workflows/test-aws-upgrade.yaml
@@ -3,6 +3,10 @@ name: Test DUBBD AWS Upgrade
 on:
   workflow_call:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   test-upgrade:
     runs-on: ubuntu-latest
@@ -19,12 +23,13 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           package-name: packages/dubbd-aws
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ROLE_TO_ASSUME }}
+          role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
           aws-region: us-west-2
+          role-duration-seconds: 21600
 
       - uses: ./.github/actions/create-bb-package
         with:
