--- a/aws/uds-core-aws/zarf-config.yaml
+++ b/aws/uds-core-aws/zarf-config.yaml
@@ -21,7 +21,7 @@ package:
       # -- Name of existing Terraform state bucket
       state_bucket_name: uds-dev-state-bucket
       # -- Key path to Terraform state file within the bucket
-      state_key: tfstate/dev/uds-dev-state-bucket.tfstate
+      state_key: tfstate/dev/uds-dev-2-state-bucket.tfstate
       # -- Name of DynamoDB table used for Terraform state locking
       state_dynamodb_table_name: uds-dev-state-dynamodb
       # -- AWS region
@@ -30,6 +30,16 @@ package:
       private_admin_lb: true
       # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
       private_tenant_lb: true
+      # -- VPC ID
+      vpc_id: vpc-089e6f8e2dd1d8591
+      # -- VPC CIDR block
+      vpc_cidr: 192.168.0.0/16
+      # -- Private subnet IDs for cluster as a comma-separated string
+      private_subnets: subnet-089bba221efd8a2e2,subnet-08ce3b3da0a310d75,subnet-0b71abd76c74ea47a
+      # -- Public subnet IDs for cluster as a comma-separated string
+      public_subnets: subnet-04469f93c6f962949,subnet-04d87e6a555915c79,subnet-061e0c1827bd519b0
+      # -- Allow public access to cluster
+      cluster_endpoint_public_access: false
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
       # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
